--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,16 @@ build/
 
 .tox/
 .coverage
+
+.DS_Store
+
+node_modules
+
+lib/core/metadata.js
+lib/core/MetadataBlog.js
+
+website/translated_docs
+website/build/
+website/yarn.lock
+website/node_modules
+website/i18n/*
